--- a/app/src/main/res/layout/all_answers_layout.xml
+++ b/app/src/main/res/layout/all_answers_layout.xml
@@ -70,107 +70,51 @@
                         >
 
 
+                        <TextView
 
-
-
-
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/c1"
+                            android:id="@+id/AnswerUserName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:text="الاسم"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="@android:color/holo_blue_light"
+                            android:textStyle="bold"
+                            android:textSize="13dp"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:layout_marginTop="3dp"
+                            android:textAlignment="center"
+                            android:padding="4dp"
+
                             android:layout_alignParentRight="true"
-                            android:layout_marginLeft="12dp"
-                            android:layout_marginTop="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginRight="12dp"
-                            app:cardElevation="14dp"
-                            app:cardCornerRadius="10dp"
-                            android:layout_centerVertical="true"
-                            android:backgroundTint="#FFFDE7"
-
-                            >
-
-                            <TextView
-
-                                android:id="@+id/AnswerUserName"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="الاسم"
-                                android:layout_marginLeft="10dp"
-                                android:textColor="@android:color/holo_blue_light"
-                                android:textStyle="bold"
-                                android:textSize="16dp"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:layout_margin="3dp"
-                                android:textAlignment="center"
-                                android:padding="4dp"
-                                android:background="#FFFDE7"
-                                />
-
-                        </android.support.v7.widget.CardView>
-
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/c2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="12dp"
-
-                            android:layout_marginBottom="5dp"
                             android:layout_marginRight="4dp"
+                            />
 
-                            android:layout_centerVertical="true"
-                            android:layout_centerHorizontal="true"
-                            android:backgroundTint="#FFFDE7"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="14dp">
 
-                            <TextView
 
-                                android:id="@+id/AnswerDate"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="التاريخ"
-                                android:layout_margin="3dp"
-                                android:layout_marginLeft="10dp"
-                                android:padding="4dp"
-                                android:background="#FFFDE7"
-                                android:textAlignment="center"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="@android:color/holo_blue_light"
-                                android:textSize="16dp"
-                                android:textStyle="bold" />
 
-                        </android.support.v7.widget.CardView>
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/c3"
+
+                        <TextView
+
+                            android:id="@+id/AnswerDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:text="التاريخ"
+                            android:layout_marginTop="3dp"
+                            android:layout_marginRight="50dp"
+                            android:padding="4dp"
 
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentLeft="true"
-                            android:layout_marginLeft="12dp"
-                            android:layout_marginBottom="5dp"
-                            android:backgroundTint="#FFFDE7"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="14dp">
+                            android:textAlignment="center"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textColor="@android:color/holo_blue_light"
+                            android:textSize="13dp"
+                            android:textStyle="bold"
+                            android:layout_toStartOf="@+id/AnswerUserName"
 
-                            <TextView
-                                android:id="@+id/AnsweerTime"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="3dp"
-                                android:layout_marginLeft="10dp"
-                                android:padding="4dp"
-                                android:text="الوقت"
-                                android:textAlignment="center"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="@android:color/holo_blue_light"
-                                android:textSize="16dp"
-                                android:textStyle="bold"
-                                android:background="#FFFDE7"
-                                />
+                            />
 
-                        </android.support.v7.widget.CardView>
+
+
+
 
 
                     </RelativeLayout>
