--- a/app/src/main/res/layout/activity_reserve_info.xml
+++ b/app/src/main/res/layout/activity_reserve_info.xml
@@ -242,7 +242,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#1fabcb"
-                            android:text="قم باختيار مكان الدرس :"
+                            android:text="قم باختيار طريقة التعلم :"
                             android:textSize="20sp"
                             android:textStyle="bold"
                             android:padding="14dp"
