--- a/app/src/main/res/layout/past_content.xml
+++ b/app/src/main/res/layout/past_content.xml
@@ -67,21 +67,16 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/buttonshape"
-                android:text="إضافة ملاحظة"
+                android:text="إضافة ملاحظة للطالب"
                 android:textColor="#ffff"
                 android:textStyle="bold"
                 android:drawableRight="@drawable/edit_40"
                 android:drawablePadding="10dp"
                 android:layout_marginBottom="5dp"
                 />
-
-
-
+            
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-
-
 
 
 </LinearLayout>
